<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_tasks"
            android:title="@string/my_tasks" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_leave"
            android:icon="@drawable/ic_leave"
            android:title="@string/apply_for_leave" />

        <item
            android:id="@+id/nav_allowance"
            android:icon="@drawable/ic_allowences"
            android:title="@string/allowances" />

        <item
            android:id="@+id/nav_project_status"
            android:title="@string/current_project"
            android:icon="@drawable/ic_project_status"/>
    </group>
</menu>
