<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ToolbarColoredIcon"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fillViewport="true"
            android:paddingTop="55dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/view2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_vertical|center"
                        android:layout_marginTop="16dp"
                        android:innerRadius="0dp"
                        android:shape="ring"
                        app:cardCornerRadius="75dp"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/img_profile_edit"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:scaleType="centerCrop" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_emp_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/brownbold"
                        android:text="#emp123"
                        android:textColor="@color/gray"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view2" />

                    <EditText
                        android:id="@+id/emp_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brownbold"
                        android:hint="@string/name"
                        android:inputType="textCapWords"
                        android:layout_margin="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_emp_id"/>
                    <EditText
                        android:id="@+id/emp_role"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brownbold"
                        android:hint="@string/role"
                        android:inputType="textCapWords"
                        android:layout_margin="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/emp_name"/>


                    <EditText
                        android:id="@+id/et_email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brownbold"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:layout_margin="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/emp_role" />

                    <EditText
                        android:id="@+id/et_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brownbold"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:layout_margin="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_email_text" />

                    <EditText
                        android:id="@+id/et_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brownbold"
                        android:hint="@string/gender"
                        android:layout_margin="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_mobile_number" />

                    <EditText
                        android:id="@+id/et_date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brownbold"
                        android:hint="@string/date_of_birth"
                        android:inputType="text"
                        android:layout_margin="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_gender" />

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/colorAccent"
                        android:layout_margin="20dp"
                        android:padding="0dp"
                        android:text="@string/save"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_date_of_birth"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>